--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -115,7 +115,7 @@ const { title } = Astro.props;
         font-size: 20px;
         text-transform: uppercase;
         color: var(--clr-light);
-        width: 100%;
+        width: fit-content;
         padding: 1px 32px 1px 16px;
         background: rgba(22, 20, 20, 1);
         background: linear-gradient(
