--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -95,7 +95,7 @@ const SKILLS_ICONS: Record<string, any> = {
     align-items: center;
     gap: 4px;
     font-size: 12px;
-    background-color: #eee;
+    background-color: rgb(22, 20, 20, 0.06);
     color: rgb(22, 20, 20, 1);
     padding: 4px;
 
@@ -105,5 +105,4 @@ const SKILLS_ICONS: Record<string, any> = {
   li:hover {
     background-color: var(--clr-yellow);
   }
-  
 </style>
