--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -96,8 +96,7 @@ const SKILL_ICONS: Record<string, any> = {
         <span class="text-purple-500"><Circle /></span>
       </h3>
       <p>
-        Algunos de mis proyectos, prácticas que brindan una idea de mi
-        experiencia y habilidades, asi como de la variedad de soluciones que
+        Algunos de mis proyectos, prácticas que brindan una idea de mi experiencia y habilidades, asi como de la variedad de soluciones que
         puedo ofrecer.
       </p>
     </header>
@@ -135,8 +134,8 @@ const SKILL_ICONS: Record<string, any> = {
 
 <style>
   .projects-container {
-    border: 1px solid rgb(22, 20, 20, 0.08);
-    background-color: rgb(22, 20, 20, 0.03);
+    border: 1px solid rgb(22, 20, 20, 0.05);
+    background-color: rgb(22, 20, 20, 0.015);
     border-radius: 8px;
     padding: 16px;
 
@@ -158,8 +157,8 @@ const SKILL_ICONS: Record<string, any> = {
   .projects-container header p {
     font-size: 12px;
     font-style: normal;
-    color: rgb(22, 20, 20, 0.7);
-    text-wrap: balance;
+    color: rgb(22, 20, 20, 0.8);
+    text-wrap: pretty;
   }
 
   .projects-items {
