--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -127,6 +127,7 @@ const { title } = Astro.props;
 
       .suscribe-container {
         border: 1px solid rgb(22, 20, 20, 0.08);
+        background: var(--clr-light);
         padding: 8px;
         margin-bottom: 32px;
       }
