--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -29,6 +29,10 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
 ---
 
 <Layout title=`Portafolio de ${name} - Blog & Notas`>
+  <div
+    class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#8080800a_1px,transparent_1px),linear-gradient(to_bottom,#8080800a_1px,transparent_1px)] bg-[size:14px_24px]"
+  >
+  </div>
   <MinNav />
   <Section>
     <h2 class="section-title flex flex-wrap items-center">
