delete border bottom

--- a/src/components/sections/NavbarMin.astro
+++ b/src/components/sections/NavbarMin.astro
@@ -69,7 +69,7 @@ import ArrowReturnLeft from "@/icons/ArrowReturnLeft.astro";
   @media (width <= 700px) {
     header {
       margin-bottom: 38px;
-      border-bottom: 1px solid rgb(22, 20, 20, 0.1);
+      /* border-bottom: 1px solid rgb(22, 20, 20, 0.1); */
     }
   }
 </style>
