--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -80,7 +80,7 @@ import Download from "@/icons/Download.astro";
   @media (width <= 700px) {
     header {
       margin-bottom: 38px;
-      border-bottom: 1px solid rgb(22, 20, 20, 0.1);
+      /* border-bottom: 1px solid rgb(22, 20, 20, 0.1); */
     }
     .navigation {
       margin-bottom: 16px;
