--- a/src/components/resume/Hero.astro
+++ b/src/components/resume/Hero.astro
@@ -114,7 +114,7 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ");
     font-weight: 400;
     text-wrap: balance;
     color: rgb(68, 68, 68, 1);
-    font-family: "Inconsolata Variable", monospace;
+    font-family: "Lato", sans-serif;
   }
 
   img {
