--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -11,7 +11,7 @@ import Download from "@/icons/Download.astro";
     >
       <a href="/" class="logoText flex items-center mb-4 md:mb-0">
         <Logo />
-        <span class="ml-1 text-2xl font-black">Edinson.</span>
+        <!-- <span class="ml-1 text-2xl font-black">Edinson.</span> -->
       </a>
       <nav
         class="md:ml-auto flex flex-wrap gap-5 items-center text-sm font-light justify-center"
@@ -36,11 +36,11 @@ import Download from "@/icons/Download.astro";
   }
 
   .logoText {
-    font-family: "Inter Variable", sans-serif;
+    font-family: "Montserrat Variable", sans-serif;
   }
 
   .nav-link {
-    font-family: "Inter Variable", sans-serif;
+    font-family: "Montserrat Variable", sans-serif;
 
     position: relative;
     padding: 2px 8px;
