--- a/src/components/sections/NavbarMin.astro
+++ b/src/components/sections/NavbarMin.astro
@@ -11,7 +11,7 @@ import ArrowReturnLeft from "@/icons/ArrowReturnLeft.astro";
     >
       <a href="/" class="logoText flex items-center mb-4 md:mb-0">
         <Logo />
-        <span class="ml-1 text-2xl font-black">Edinson.</span>
+        <!-- <span class="ml-1 text-2xl font-black">Edinson.</span> -->
       </a>
       <nav
         class="md:ml-auto flex flex-wrap gap-5 items-center text-base justify-center"
@@ -28,13 +28,13 @@ import ArrowReturnLeft from "@/icons/ArrowReturnLeft.astro";
   }
 
   .logoText {
-    font-family: "Inter Variable", sans-serif;
+    font-family: "Montserrat Variable", sans-serif;
   }
 
   .return-btn {
     position: relative;
     padding: 2px 8px;
-    font-family: "Inter Variable", sans-serif;
+    font-family: "Montserrat Variable", sans-serif;
     font-size: 12px;
     text-transform: uppercase;
     font-weight: 300;
