--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -15,7 +15,7 @@ const { frontmatter } = Astro.props;
       >
         <a href="/" class="logoText flex items-center mb-4 md:mb-0">
           <Logo />
-          <span class="ml-1 text-2xl">Edinson.</span>
+          <!-- <span class="ml-1 text-2xl">Edinson.</span> -->
         </a>
         <nav
           class="md:ml-auto flex flex-wrap gap-5 items-center text-base justify-center"
@@ -62,7 +62,7 @@ const { frontmatter } = Astro.props;
   }
 
   .logoText {
-    font-family: "Inter Variable", sans-serif;
+    font-family: "Montserrat Variable", sans-serif;
     font-weight: 700;
     font-size: 1.2rem;
   }
