--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -26,7 +26,7 @@ const { name, label } = basics;
 
 <style>
   body {
-    font-family: "Inconsolata Variable", monospace;
+    font-family: "Lato", sans-serif;
   }
   main {
     margin: 64px 0;
