--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -176,6 +176,7 @@ const SKILL_ICONS: Record<string, any> = {
     padding: 2px 4px;
     width: fit-content;
     height: 100%;
+    border-radius: 4px;
 
     transition: all 0.3s ease-in-out;
   }
