--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -115,13 +115,14 @@ const { title } = Astro.props;
         text-transform: none;
         color: var(--clr-light);
         width: fit-content;
-        padding: 1px 32px 1px 16px;
+        padding: 1px 40px 1px 16px;
         background: rgba(22, 20, 20, 1);
         background: linear-gradient(
           0deg,
           rgba(22, 20, 20, 1),
           rgba(22, 20, 20, 0.7)
         );
+        border-radius: 4px;
       }
 
       .suscribe-container {
