--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -8,6 +8,10 @@ const { frontmatter } = Astro.props;
 ---
 
 <Layout title={frontmatter.title}>
+  <div
+    class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#8080800a_1px,transparent_1px),linear-gradient(to_bottom,#8080800a_1px,transparent_1px)] bg-[size:14px_24px]"
+  >
+  </div>
   <Section>
     <header class="mb-8" transition:animate={slide({ duration: ".5s" })}>
       <div
@@ -20,7 +24,9 @@ const { frontmatter } = Astro.props;
         <nav
           class="md:ml-auto flex flex-wrap gap-5 items-center text-base justify-center"
         >
-          <a href="/blog" class="return-btn">Regresar <ArrowReturnLeft /></a>
+          <a href="/blog" class="return-btn"
+            >Volver a Blog <ArrowReturnLeft /></a
+          >
         </nav>
       </div>
     </header>
@@ -68,18 +74,38 @@ const { frontmatter } = Astro.props;
   }
 
   .return-btn {
+    position: relative;
+    padding: 2px 8px;
+    font-family: "Montserrat Variable", sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 300;
+
     display: flex;
     align-items: center;
-    gap: 0.25rem;
-    border: 0.0625rem solid rgba(30, 37, 44, 25%);
-    border-radius: 0.125rem;
-    padding-inline: 0.375rem;
-    color: #999;
+    gap: 4px;
+
+    color: rgb(22, 20, 20, 0.85);
+
+    transition: 0.2s;
+    isolation: isolate;
   }
 
-  .return-btn:hover {
-    color: #666;
-    border: 0.0625rem solid #666;
+  .return-btn::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 2px;
+    background-color: var(--clr-yellow);
+    transition: 0.3s;
+    transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    z-index: -1;
+  }
+
+  .return-btn:hover::after {
+    height: 100%;
   }
 
   @media (width <= 700px) {
