--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -19,7 +19,7 @@ const { name, label } = basics;
   <Section>
     <h2 class="section-title flex flex-wrap items-center">
       Proyectos<span class="ml-1 font-light text-sm tracking-tighter"
-        >HTML-CSS-JS | Frameworks | Backend
+        >HTML-CSS-JS | FRONTEND | BACKEND
       </span>
     </h2>
 
@@ -92,7 +92,7 @@ const { name, label } = basics;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 0.5rem;
     border: 1px solid rgb(22, 20, 20, 0.05);
-    background-color: rgb(22, 20, 20, 0.015);
+    background-color: rgb(252, 252, 252, 1);
     border-radius: 10px;
     padding: 8px;
   }
