--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -2,6 +2,8 @@
 import Layout from "@/layouts/Layout.astro";
 import Section from "@/components/Section.astro";
 import Logo from "@/icons/Logo.astro";
+import Menu from "@/icons/Menu.astro";
+import Close from "@/icons/CloseX.astro";
 import ArrowReturnLeft from "@/icons/ArrowReturnLeft.astro";
 import { slide } from "astro:transitions";
 const { frontmatter } = Astro.props;
@@ -9,29 +11,36 @@ const { frontmatter } = Astro.props;
 
 <Layout title={frontmatter.title}>
   <div
-    class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#8080800a_1px,transparent_1px),linear-gradient(to_bottom,#8080800a_1px,transparent_1px)] bg-[size:14px_24px]"
+    class="absolute inset-0 -z-10 max-h-full max-w-full bg-[#FFFDF8] bg-[linear-gradient(to_right,#8080800a_1px,transparent_1px),linear-gradient(to_bottom,#8080800a_1px,transparent_1px)] bg-[size:14px_24px]"
   >
   </div>
   <Section>
-    <header class="mb-8" transition:animate={slide({ duration: ".5s" })}>
-      <div
-        class="container mx-auto flex flex-wrap py-4 flex-col md:flex-row items-center"
+    <header
+      class="main-header flex items-center justify-between px-0 py-4"
+      transition:animate={slide({ duration: ".5s" })}
+    >
+      <a href="/" class="logoText flex items-center">
+        <Logo />
+        <span class="ml-1 text-2xl font-black">edinson.dev</span>
+      </a>
+      <nav
+        class="nav-menu flex flex-wrap items-center gap-5 text-sm font-light uppercase justify-center"
       >
-        <a href="/" class="logoText flex items-center mb-4 md:mb-0">
-          <Logo />
-          <!-- <span class="ml-1 text-2xl">Edinson.</span> -->
-        </a>
-        <nav
-          class="md:ml-auto flex flex-wrap gap-5 items-center text-base justify-center"
-        >
-          <a href="/blog" class="return-btn"
-            >Volver a Blog <ArrowReturnLeft /></a
+        <button class="open-menu" id="open-menu">
+          <Menu />
+        </button>
+        <ul class="nav-list" id="nav-list">
+          <button class="close-menu" id="close-menu">
+            <Close />
+          </button>
+          <a href="/blog" class="nav-link font-bold"
+            >Volver a Blog<ArrowReturnLeft /></a
           >
-        </nav>
-      </div>
+        </ul>
+      </nav>
     </header>
 
-    <div>
+    <div class="mt-[72px]">
       <h2 class="text-2xl font-bold">{frontmatter.title}</h2>
       <p class="italic text-gray-400">{frontmatter.pubDate.slice(0, 10)}</p>
       <p class="text-balance">{frontmatter.description}</p>
@@ -50,13 +59,27 @@ const { frontmatter } = Astro.props;
 </Layout>
 
 <style>
+  .main-header {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    border-bottom: 1px solid rgb(30, 37, 44, 0.1);
+  }
+  .main-header::before {
+    background-color: rgb(255, 253, 248, 0.98);
+    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px);
+    content: "";
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+  }
   p {
     font-size: 14px;
     line-height: 1.5;
     text-wrap: balance;
     padding-left: 16px;
   }
-
   img {
     border: 1px solid rgb(30, 37, 44, 0.08);
     aspect-ratio: 1 / 1;
@@ -66,51 +89,87 @@ const { frontmatter } = Astro.props;
     border-radius: 12px;
     margin: 16px 0;
   }
-
   .logoText {
-    font-family: "Montserrat Variable", sans-serif;
-    font-weight: 700;
-    font-size: 1.2rem;
+    font-family: var(--titles);
   }
-
-  .return-btn {
-    position: relative;
-    padding: 2px 8px;
-    font-family: "Montserrat Variable", sans-serif;
-    font-size: 12px;
-    text-transform: uppercase;
-    font-weight: 300;
-
+  .close-menu,
+  .open-menu {
+    display: none;
+  }
+  .nav-list {
+    display: flex;
+    gap: 1rem;
+  }
+  .nav-link {
     display: flex;
     align-items: center;
     gap: 4px;
-
-    color: rgb(22, 20, 20, 0.85);
-
+    position: relative;
     transition: 0.2s;
-    isolation: isolate;
   }
-
-  .return-btn::after {
+  .nav-link::after {
     content: "";
     position: absolute;
-    bottom: 0;
     left: 0;
     right: 0;
+    top: 100%;
     height: 2px;
-    background-color: var(--clr-yellow);
-    transition: 0.3s;
-    transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    z-index: -1;
-  }
 
-  .return-btn:hover::after {
-    height: 100%;
+    background-color: var(--clr-yellow);
+    transform: scaleX(0);
+    transition: 0.2s;
+    transform-origin: left;
+  }
+  .nav-link:hover {
+    color: var(--clr-yellow);
+  }
+  .nav-link:hover::after {
+    transform: scaleX(1);
   }
 
   @media (width <= 700px) {
     header {
       margin-bottom: 38px;
+    }
+    .nav-list {
+      position: fixed;
+      inset: 0;
+      flex-direction: column;
+      text-align: right;
+      align-items: end;
+      padding: 4rem 2rem;
+      width: 100%;
+      height: 100dvh;
+      z-index: 1;
+      gap: 2.5rem;
+      background-color: rgb(255, 253, 248, 0.9);
+      -webkit-backdrop-filter: blur(10px);
+      backdrop-filter: blur(10px);
+
+      visibility: hidden;
+      opacity: 0;
+    }
+    .nav-list.active {
+      visibility: visible;
+      opacity: 1;
+    }
+    .nav-link {
+      font-size: 1.5rem;
+      padding: 8px 4px;
+    }
+    .close-menu {
+      display: block;
+      position: absolute;
+      font-size: 2rem;
+      cursor: pointer;
+      left: 1.5rem;
+      top: 1.5rem;
+      color: var(--clr-dark);
+    }
+    .open-menu {
+      display: block;
+      font-size: 2rem;
+      color: var(--clr-dark);
     }
   }
 </style>
