--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,7 +15,7 @@ import Filetextfill from "@/icons/Filetextfill.astro";
 
 import { posts } from "@social";
 import { basics } from "@landing";
-import { slide } from "astro:transitions";
+
 const SOCIAL_ICONS: Record<string, any> = {
   Facebook,
   Instagram,
@@ -30,7 +30,7 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
 
 <Layout title=`Portafolio de ${name} - Blog & Notas`>
   <div
-    class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#8080800a_1px,transparent_1px),linear-gradient(to_bottom,#8080800a_1px,transparent_1px)] bg-[size:14px_24px]"
+    class="absolute inset-0 -z-10 max-h-full max-w-full bg-[#FFFDF8] bg-[linear-gradient(to_right,#8080800a_1px,transparent_1px),linear-gradient(to_bottom,#8080800a_1px,transparent_1px)] bg-[size:14px_24px]"
   >
   </div>
   <MinNav />
@@ -59,7 +59,7 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
       <h2 class="title-container-post">Publicaciones recientes ...</h2>
       {
         allPosts.map((post) => (
-          <li transition:animate={slide({ duration: ".5s" })}>
+          <li>
             <img
               src={post.frontmatter.image.url}
               alt={post.frontmatter.title}
@@ -93,7 +93,6 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
         })
       }
     </ul>
-    
   </Section>
   <Footer />
 </Layout>
@@ -105,8 +104,8 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
     gap: 16px;
     margin-top: 1.5rem;
     padding: 1rem;
-    border: 1px solid rgb(22, 20, 20, 0.05);
-    background-color: rgb(252, 252, 252, 1);
+    border: 1px solid rgb(30, 37, 44, 0.05);
+    background-color: var(--clr-light);
     border-radius: 10px;
   }
 
@@ -115,7 +114,7 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
     font-weight: 500;
     letter-spacing: 0.05em;
     margin-bottom: 24px;
-    border-bottom: 1px solid rgb(22, 20, 20, 0.15);
+    border-bottom: 1px solid rgb(30, 37, 44, 0.15);
   }
 
   li {
@@ -123,14 +122,14 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
     gap: 16px;
     width: 100%;
     background-color: var(--clr-light);
-    border: 1px solid rgb(22, 20, 20, 0.05);
+    border: 1px solid rgb(30, 37, 44, 0.05);
     border-radius: 8px;
     padding: 0.5rem;
     transition: all 0.3s ease;
   }
 
   li:hover {
-    background-color: rgb(255, 193, 52, 0.85);
+    background-color: var(--clr-yellow);
   }
 
   li img {
@@ -177,7 +176,7 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    color: rgb(22, 20, 20, 0.8);
+    color: rgb(30, 37, 44, 0.8);
     font-weight: 500;
     letter-spacing: 0.05em;
     font-size: 14px;
@@ -185,8 +184,8 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
   }
 
   .feeds-rss .feed {
-    background-color: rgb(22, 20, 20, 0.005);
-    border: 1px solid rgb(22, 20, 20, 0.02);
+    background-color: rgb(30, 37, 44, 0.005);
+    border: 1px solid rgb(30, 37, 44, 0.02);
     transition: all 0.3s ease-in;
     gap: 8px;
   }
@@ -196,16 +195,16 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
     flex-direction: row;
     align-items: center;
     gap: 1rem;
-    color: rgb(22, 20, 20, 0.65);
+    color: rgb(30, 37, 44, 0.65);
     font-size: 14px;
   }
 
   .feeds-rss li:hover {
-    background-color: rgb(255, 193, 52, 0.85);
+    background-color: var(--clr-yellow);
   }
 
   .feeds-rss li a:hover {
     text-decoration: underline;
-    color: rgb(22, 20, 20, 0.85);
+    color: rgb(30, 37, 44, 0.85);
   }
 </style>
