--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -4,26 +4,55 @@ import Section from "@/components/Section.astro";
 import MinNav from "@/components/sections/NavbarMin.astro";
 import Footer from "@/components/sections/Footer.astro";
 
-import { Github, Rss } from "simple-icons-astro";
+import {
+  Rss,
+  Github,
+  Html5,
+  Css3,
+  React,
+  Javascript,
+  Python,
+  Vite,
+} from "simple-icons-astro";
+import Circle from "@/icons/circle.astro";
+import AstroIcon from "@/icons/AstroIcon.astro";
+import Data from "@/icons/Data.astro";
 
-import { basics, projects } from "@cv";
+const SKILL_ICONS: Record<string, any> = {
+  Html5,
+  Css3,
+  React,
+  Javascript,
+  AstroIcon,
+  Vite,
+};
+
+import { basics, projects, projectsB } from "@landing";
+
 const { name, label } = basics;
+
 ---
 
 <Layout title=`Proyectos de ${name} - ${label}`>
   <div
-    class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#8080800a_1px,transparent_1px),linear-gradient(to_bottom,#8080800a_1px,transparent_1px)] bg-[size:14px_24px]"
+    class="absolute inset-0 -z-10 max-h-full max-w-full bg-[#FFFDF8] bg-[linear-gradient(to_right,#8080800a_1px,transparent_1px),linear-gradient(to_bottom,#8080800a_1px,transparent_1px)] bg-[size:14px_24px]"
   >
   </div>
   <MinNav />
   <Section>
-    <h2 class="section-title flex flex-wrap items-center">
+    <h2
+      class="section-title flex flex-wrap items-center"
+      
+    >
       Proyectos<span class="ml-1 font-light text-sm tracking-tighter"
         >HTML-CSS-JS | FRONTEND | BACKEND
       </span>
     </h2>
 
-    <article class="suscribe-container">
+    <article
+      class="suscribe-container"
+      
+    >
       <p>
         Los pequeños detalles marcan una gran diferencia. Con los años he
         aprendido a fijarme en esos detalles. Nunca dejo de aprender. He aquí
@@ -38,78 +67,210 @@ const { name, label } = basics;
       </div>
     </article>
 
-    <ul class="projects-items">
-      {
-        projects.map(
-          ({ url, description, highlights, name, isActive, github }) => {
-            return (
-              <li class="items">
-                <article class="item">
-                  <header>
-                    <h3 class="">
-                      <a
-                        href={url}
-                        title={`Ver el proyecto ${name}`}
-                        target="_blank"
-                      >
-                        {name}
-                      </a>
-                      {isActive && <span>•</span>}
-                      {github && (
+    <article
+      class="projects-container"
+      
+    >
+      <header>
+        <h3>
+          Con HTML, CSS y JS
+          <span class="text-red-400"><Circle /></span>
+          <span class="text-blue-400"><Circle /></span>
+          <span class="text-yellow-500"><Circle /></span>
+        </h3>
+        <p>
+          Presento alguno de mis proyectos destacados enfocados en el uso de
+          HTML semantico, reglas CSS y funcionalidades en Javascript.
+        </p>
+      </header>
+
+      <ul class="projects-items">
+        {
+          projects.map(
+            ({
+              url,
+              description,
+              highlights,
+              name,
+              isActive,
+              github,
+              skill,
+            }) => {
+              const Icon = SKILL_ICONS[skill];
+
+              return (
+                <li class="items">
+                  <article class="item">
+                    <header>
+                      <h3 class="">
                         <a
-                          class="github-code-link"
-                          href={github}
+                          href={url}
+                          title={`Ver el proyecto ${name}`}
                           target="_blank"
-                          title={`Ver código fuente del proyecto ${name}`}
                         >
-                          <Github class="w-4 h-4" />
+                          {name}
                         </a>
-                      )}
-                    </h3>
-                    <p class=" line-clamp-2">{description}</p>
-                  </header>
-                  <footer>
-                    <ul>
-                      {highlights.map((highlight) => {
-                        return <span>{highlight}</span>;
-                      })}
-                    </ul>
-                  </footer>
-                </article>
-              </li>
-            );
-          }
-        )
-      }
-    </ul>
+                        {isActive && <span>•</span>}
+                        {github && (
+                          <a
+                            class="github-code-link"
+                            href={github}
+                            target="_blank"
+                            title={`Ver código fuente del proyecto ${name}`}
+                          >
+                            <Github class="w-4 h-4" />
+                          </a>
+                        )}
+                      </h3>
+                      <p class=" line-clamp-2">{description}</p>
+                    </header>
+                    <footer>
+                      <ul>
+                        {highlights.map((highlight) => {
+                          return <span>{highlight}</span>;
+                        })}
+                      </ul>
+                    </footer>
+                  </article>
+                </li>
+              );
+            }
+          )
+        }
+      </ul>
+    </article>
+
+    <article
+      class="projects-container"
+      
+    >
+      <header>
+        <h3>
+          Con Frameworks
+          <span class="text-green-400"><Circle /></span>
+          <span class="text-red-600"><Circle /></span>
+          <span class="text-purple-500"><Circle /></span>
+        </h3>
+        <p>
+          Algunos de mis proyectos, prácticas que brindan una idea de mi
+          experiencia y habilidades, asi como de la variedad de soluciones que
+          puedo ofrecer.
+        </p>
+      </header>
+
+      <ul class="projects-items">
+        {
+          projectsB.map(
+            ({
+              url,
+              description,
+              highlights,
+              name,
+              isActive,
+              github,
+              skill,
+            }) => {
+              const Icon = SKILL_ICONS[skill];
+
+              return (
+                <li class="items">
+                  <article class="item">
+                    <header>
+                      <h3 class="">
+                        <a
+                          href={url}
+                          title={`Ver el proyecto ${name}`}
+                          target="_blank"
+                        >
+                          {name}
+                        </a>
+                        {isActive && <span>•</span>}
+                        {github && (
+                          <a
+                            class="github-code-link"
+                            href={github}
+                            target="_blank"
+                            title={`Ver código fuente del proyecto ${name}`}
+                          >
+                            <Github class="w-4 h-4" />
+                          </a>
+                        )}
+                      </h3>
+                      <p class=" line-clamp-2">{description}</p>
+                    </header>
+                    <footer>
+                      <ul>
+                        {highlights.map((highlight) => {
+                          return <span>{highlight}</span>;
+                        })}
+                      </ul>
+                    </footer>
+                  </article>
+                </li>
+              );
+            }
+          )
+        }
+      </ul>
+    </article>
   </Section>
   <Footer />
 </Layout>
 
 <style>
+  .projects-container {
+    border: 1px solid transparent;
+    background-color: rgb(255, 253, 248, 1);
+    border-radius: 0.5rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 32px;
+    background: #fffdf8;
+    box-shadow:
+      1px 5px 40px #dedcd8,
+      -1px -5px 40px #fffdf8;
+  }
+  .projects-container header {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .projects-container header h3 {
+    display: flex;
+    align-items: center;
+    gap: 0.25rem;
+    font-size: 14px;
+    font-weight: 600;
+    text-wrap: pretty;
+    color: rgb(30, 37, 44, 0.8);
+  }
+  .projects-container header p {
+    font-size: 12px;
+    text-wrap: pretty;
+    color: rgb(30, 37, 44, 0.6);
+  }
   .projects-items {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 0.5rem;
-    border: 1px solid rgb(22, 20, 20, 0.05);
-    background-color: rgb(252, 252, 252, 1);
-    border-radius: 10px;
+    border: 1px solid rgb(30, 37, 44, 0.025);
+    background-color: rgb(30, 37, 44, 0.025);
+    border-radius: 0.5rem;
     padding: 8px;
   }
-
   .items {
     overflow: hidden;
-    background: white;
-    border: 1px solid rgb(22, 20, 20, 0.1);
-    border-radius: 10px;
-    padding: 0.5rem;
+    background-color: rgb(255, 253, 248, 1);
+    border-radius: 0.5rem;
+    padding: 8px;
     transition: all 0.3s ease-in-out;
+    position: relative;
   }
-
   .items:hover {
-    background: rgb(255, 193, 52, 0.85);
+    background-color: var(--clr-yellow);
   }
-
   .item {
     display: flex;
     flex-direction: column;
@@ -117,53 +278,46 @@ const { name, label } = basics;
     gap: 0.5rem;
     height: 100%;
   }
-
   .item header h3 {
     display: flex;
     align-items: center;
-    gap: 4px;
+    gap: 0.25rem;
   }
-
   .item header h3 a {
     font-size: 14px;
     font-weight: 500;
     letter-spacing: -0.05rem;
-    color: rgb(22, 20, 20, 0.9);
     text-wrap: pretty;
+    color: rgb(30, 37, 44, 0.9);
   }
-
   .item header h3 a:hover {
     text-decoration: underline;
   }
-
   .item header h3 span {
     color: rgb(0, 188, 47, 1);
   }
-
   .item header p {
     font-size: 12px;
     line-height: 1.4;
-    color: rgb(22, 20, 20, 0.65);
+    color: rgb(30, 37, 44, 0.65);
     text-wrap: pretty;
   }
-
   .item footer ul {
     display: flex;
     flex-wrap: wrap;
     gap: 4px;
   }
-
   .item footer ul span {
-    font-size: 10px;
-    color: rgb(22, 20, 20, 0.5);
-    background: rgb(22, 20, 20, 0.08);
+    font-size: 9px;
+    text-transform: uppercase;
+    color: rgb(30, 37, 44, 0.5);
+    background: rgb(30, 37, 44, 0.08);
     padding: 1px 3px;
     border-radius: 4px;
     width: fit-content;
   }
-
   .github-code-link {
-    color: rgb(22, 20, 20, 0.55);
+    color: rgb(30, 37, 44, 0.55);
     margin-left: 8px;
   }
 </style>
