--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -64,7 +64,7 @@ const SKILLS_ICONS: Record<string, any> = {
 
 <Section>
   <h2 class="section-title flex items-center gap-1">
-    <Briefcase /> Cosas con las que trabajo
+    <Briefcase /> Habilidades
   </h2>
 
   <article class="suscribe-container">
