update fonts bold

--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -32,7 +32,7 @@ import News from "@/icons/News.astro";
         </button>
         <a href="/proyectos" class="nav-link">Proyectos<Briefcase /></a>
         <a href="/blog" class="nav-link">BlogPosts<News /></a>
-        <a href="/resume" target="_blank" class="nav-link font-bold">Resume<Download /></a>
+        <a href="/resume" target="_blank" class="nav-link ">Resume<Download /></a>
       </ul>
     </nav>
   </header>
