--- a/src/components/sections/NavbarMin.astro
+++ b/src/components/sections/NavbarMin.astro
@@ -28,7 +28,7 @@ import News from "@/icons/News.astro";
         <button class="close-menu" id="close-menu">
           <Close />
         </button>
-        <a href="/" class="nav-link font-bold">Volver<ArrowReturnLeft /></a>
+        <a href="/" class="nav-link ">Volver<ArrowReturnLeft /></a>
       </ul>
     </nav>
   </header>
