--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -33,7 +33,7 @@ const { frontmatter } = Astro.props;
           <button class="close-menu" id="close-menu">
             <Close />
           </button>
-          <a href="/blog" class="nav-link font-bold"
+          <a href="/blog" class="nav-link"
             >Volver a Blog<ArrowReturnLeft /></a
           >
         </ul>
