--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -168,8 +168,8 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
   }
 
   .feeds-rss {
-    background-color: transparent;
-    gap: 8px;
+    background-color: var(--clr-light);
+    gap: .5rem;
   }
 
   .feeds-title {
