--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -48,7 +48,7 @@ const printInfo = [
   >
     <div class="hero-info flex flex-col gap-4">
       <h1 class="text-4xl font-black tracking-tighter text-pretty">
-        {name}
+        Hola! Soy Edinson Rivera.
       </h1>
 
       <h2 class="text-base font-light text-balance">
