--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -137,7 +137,7 @@ const { title } = Astro.props;
         padding: 4px;
         background-color: rgb(30, 37, 44, 0.08);
       }
-
+      
       .print {
         display: none !important;
       }
@@ -159,9 +159,9 @@ const { title } = Astro.props;
           break-inside: avoid;
         }
       }
-    </style> 
+    </style>
     <script>
-      import '../scripts/main.js';
+      import "../scripts/main.js";
     </script>
   </body>
 </html>
