--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -41,6 +41,7 @@ import News from "@/icons/News.astro";
 <style>
   .main-header {
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
     z-index: 10;
     border-bottom: 1px solid rgb(30, 37, 44, 0.1);
@@ -53,7 +54,7 @@ import News from "@/icons/News.astro";
     position: absolute;
     inset: 0;
     z-index: -1;
-  }
+  } 
   .logoText {
     font-family: var(--titles);
   }
@@ -104,9 +105,11 @@ import News from "@/icons/News.astro";
       height: 100dvh;
       z-index: 1;
       gap: 2.5rem;
-      background-color: rgb(255, 253, 248, 0.9);
-      -webkit-backdrop-filter: blur(10px);
-      backdrop-filter: blur(10px);
+      background-color: rgb(255, 253, 248, 1);
+      backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(20px);
+      
+      
 
       visibility: hidden;
       opacity: 0;
