--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -12,12 +12,12 @@ const { summary } = basics;
 
   <p>{summary}</p>
 
-  <button
+  <!-- <button
     class="resume flex items-center gap-1 mt-6 uppercase text-sm font-light"
   >
     Resume
     <Download />
-  </button>
+  </button> -->
 </Section>
 
 <style>
