--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -27,7 +27,7 @@ const SKILL_ICONS: Record<string, any> = {
 };
 ---
 
-<Section>
+<Section id="proyectos1">
   <h2 class="section-title flex items-center gap-1">
     <Data /> Proyectos
   </h2>
