--- a/src/components/sections/NavbarMin.astro
+++ b/src/components/sections/NavbarMin.astro
@@ -42,11 +42,11 @@ import News from "@/icons/News.astro";
     border-bottom: 1px solid rgb(30, 37, 44, 0.1);
   }
   .main-header::before {
-    background-color: rgb(255, 253, 248, 0.9);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
     content: "";
     position: absolute;
+    background-color: rgb(255, 253, 248, 0.98);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
     inset: 0;
     z-index: -1;
   }
@@ -100,7 +100,7 @@ import News from "@/icons/News.astro";
       height: 100dvh;
       z-index: 1;
       gap: 2.5rem;
-      background-color: rgb(255, 253, 248, 1);
+      background-color: rgb(255, 253, 248, .98);
       -webkit-backdrop-filter: blur(10px);
       backdrop-filter: blur(10px);
 
