--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -123,7 +123,8 @@ const SKILLS_ICONS: Record<string, any> = {
     transition: all 0.2s ease-in-out;
   }
 
-  li:hover {
-    background-color: var(--clr-yellow);
+  li:hover {    
+    background-color: rgb(30, 37, 44, 0.9);
+    color: rgb(255, 253, 248, 0.9);
   }
 </style>
